--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: DelayedCommand
-version: 0.1 Beta
+version: 1.0
+api-version: '1.20'
 author: Bjorno43
 main: netherlands.bjorn.delayedcommand.Main
 commands:
